samples/_failures_safe/1761249589_69fbdf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2b95aca.c: In function ‘main’:
./samples/SAFE/__tmp_c2b95aca.c:145:5: error: expected declaration or statement at end of input
  145 |     if (fgets(line, sizeof(line), stdin) == NULL) return 1;
      |     ^~
